# cb-palettes

./: README.md  pyproject.toml
cb_palettes/: builtin.py  color.py  palette.py
docs/: create_colorbar.ipynb
