[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cb_palettes"
version = "0.1.1"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "A collection of cb-friendly color palettes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tjkessler/cb-palettes"
"Bug Tracker" = "https://github.com/tjkessler/cb-palettes/issues"
